--- a/intel.html
+++ b/intel.html
@@ -1,10 +1,10 @@
 deneme
 <html>
     <body>
-        <div id="deneme">
-            
-        </div>
-        
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Sed totam nisi aperiam.</p>
+        <p>Quibusdam ducimus incidunt cum.</p>
+        <p>Temporibus minus nam repudiandae?</p>  
     </body>
 </html>
 
